# cy-kafka-console

./: .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  settings.html  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
coverage/: clover.xml  coverage-final.json  heap.ts.html  index.html  splash-progress.ts.html
coverage/src/: heap.ts.html  index.html  settings.ts.html  splash-progress.ts.html  splash.ts.html
docs/: DEVELOPMENT.md
docs/superpowers/plans/: 2026-06-14-cy-kafka-console.md
docs/superpowers/specs/: 2026-06-14-cy-kafka-console-design.md
scripts/: build-app.ps1  build-app.sh  build-jre.ps1  build-jre.sh  fetch-kafbat-jar.ps1  fetch-kafbat-jar.sh  jdk-env.sh  jre-modules.txt  kafbat.env  make-latest-json.mjs  rename-bundles.mjs
src/: heap.test.ts  heap.ts  settings.ts  splash-progress.test.ts  splash-progress.ts  splash.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: clock.rs  config.rs  error.rs  health.rs  lib.rs  main.rs  paths.rs  port.rs  process.rs  resources.rs  settings.rs  sidecar.rs
src-tauri/tests/: integration_sidecar.rs
tests/e2e/: package-lock.json  package.json  tsconfig.json  wdio.conf.ts
tests/e2e/specs/: launch.e2e.ts
