[package]
name = "kafka-console"
version = "0.1.0"
edition = "2021"
rust-version = "1.77"

[lib]
name = "kafka_console_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"
tauri-plugin-dialog = "2"
thiserror = "1"
ureq = { version = "2", default-features = false }
directories = "5"
serde_json = "1"

[dev-dependencies]
tempfile = "3"
testcontainers = { version = "0.20", features = ["blocking"] }
testcontainers-modules = { version = "0.8", features = ["kafka"] }

[features]
# 集成测试开关：需要本机已存在 resources/jre 与 resources/kafbat/*.jar
integration = []
